--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,10 @@
+<script type="text/javascript">
+  <% if current_user %>
+    window.currentUser = <%= render(
+      "users/show.json.jbuilder",
+      user: current_user
+    ).html_safe %>
+  <% end %>
+</script>
 
 <div id='root'/>
