--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,9 +1,6 @@
 <script type="text/javascript">
   <% if current_user %>
-    window.currentUser = <%= render(
-      "users/show.json.jbuilder",
-      user: current_user
-    ).html_safe %>
+    window.currentUser = "<%= current_user.username %>"
   <% end %>
 </script>
 
